samples/_failures_safe/1761610895_28fc04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8adfcbd.c: In function ‘main’:
./samples/SAFE/__tmp_d8adfcbd.c:155:9: error: expected declaration or statement at end of input
  155 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_d8adfcbd.c:155:9: error: expected declaration or statement at end of input
